--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @font-face{
     font-family:"plain light";
     src:url(plain-light-webfont.ttf)
@@ -23,7 +24,8 @@
 html,body{
     height: 100%;
     width: 100%;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-family: "Plain Light";
     color: white;
     background-color: #151515;
@@ -38,7 +40,9 @@ html,body{
     position: fixed;
     z-index: 999;
     mix-blend-mode: difference;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
 
 }
 #loader{
@@ -50,18 +54,32 @@ html,body{
     padding: 25vh 8vw;
 }
 .line{
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     margin-right: 5px;
     overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     gap: 3vw;
 }
 #line1-part1{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     gap: 2vw;
 }
 #line1-part1 h5, #line1-part1 h6{
@@ -83,8 +101,10 @@ html,body{
     font-size: 5vw;
     text-transform: uppercase;
     opacity:0;
-    animation-duration:2s;
-    animation-iteration-count:infinite;
+    -webkit-animation-duration:2s;
+            animation-duration:2s;
+    -webkit-animation-iteration-count:infinite;
+            animation-iteration-count:infinite;
     text-align:end;
 }
 #main{
@@ -100,16 +120,28 @@ html,body{
     display: none;
 }
 #page1 #nav{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     padding: 2.3vw 5.5vw;
     /* position: relative; */
 }
 #nav-part2{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     gap: 2vw;
 }
 #nav-part2 h4{
@@ -118,12 +150,18 @@ html,body{
 }
 .hero{
     /* background-color: red; */
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     width: 71%;
     margin-left: 29%;
     overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: relative;
     z-index: 999;
 
@@ -193,7 +231,8 @@ html,body{
     height:100%;
     width: 100%;
     position: relative;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     /* right: 2.2%; */
     opacity: 0;
     
@@ -207,9 +246,15 @@ html,body{
     top:-10%;
     left:80%;
     z-index: 999;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 
 }
 #video-cursor i{
@@ -245,17 +290,25 @@ html,body{
     /* background-color: red; */
     padding: 1vw;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 .img-div{
     height: 33vw;
     width: 24vw;
     position: relative;
     overflow: hidden;
-    flex-shrink: 0;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
     /* background-color: blue; */
     padding: 3vw;
     margin-top: 2vw;
@@ -265,8 +318,10 @@ html,body{
 .img-div img{
     height: 100%;
     width: 100%;
-    object-fit: cover;
-    object-position: center;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center;
+       object-position: center;
 
 }
 .img-div:nth-child(2){
@@ -291,9 +346,15 @@ html,body{
     width: 23vw;
     border-radius: 50%;
     border: 2px solid #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-right: 1vw;
     position: relative;
     right: 4%;
@@ -303,9 +364,15 @@ html,body{
     width: 23vw;
     border-radius: 50%;
     border: 2px solid #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-right: 1vw;
     position: relative;
     left: 2%;
@@ -325,12 +392,20 @@ html,body{
     top: 0;
     left: 0;
     background-color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     border-radius:50%;
     scale: 0;
     overflow: hidden;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
     transition: all ease 0.3s;
 }
 .circle-in p{
@@ -339,8 +414,12 @@ html,body{
     font-weight: 500;
     width: 60%;
     scale: 0;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
     transition: all ease 0.3s;
-    transition-delay: 0.4s
+    -webkit-transition-delay: 0.4s;
+         -o-transition-delay: 0.4s;
+            transition-delay: 0.4s
 }
 .page3-circle1:hover .circle-in{
     scale: 1;
@@ -398,6 +477,8 @@ html,body{
     margin-bottom: 3vw;
 }
 #page4-flex{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 #page4-flex img{
@@ -417,9 +498,15 @@ html,body{
     margin-left: 35vh;
 }
 .blue-div-elem{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content:space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack:justify;
+        -ms-flex-pack:justify;
+            justify-content:space-between;
     /* background-color: red; */
     padding: 2vw 0;
     border-bottom: 2px solid #d0d0d0;
@@ -458,14 +545,50 @@ html,body{
     color: transparent;
     text-transform: uppercase;
     display: inline-block;
-    animation-name: marque;
-    animation-duration: 13s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
+    -webkit-animation-name: marque;
+            animation-name: marque;
+    -webkit-animation-duration: 13s;
+            animation-duration: 13s;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
 
 }
 .elem::-webkit-scrollbar{
     background-color: transparent;
+}
+
+@-webkit-keyframes anime{
+    0%{
+        font-family:"plain light";
+        -webkit-text-stroke: 1px #fff;
+        color: #fff;
+        font-weight: 500;
+        opacity:0;
+    }
+    47%{
+        font-family:"plain light";
+        -webkit-text-stroke: 1px #fff;
+        color: #fff;
+        font-weight: 500;
+        opacity: 1;
+    }
+    50%{
+        font-family:'silk serif';
+        -webkit-text-stroke: 1px #fff;
+        color: #fff;
+        font-weight: 500;
+        color: transparent;
+        opacity: 0;
+    }
+    100%{
+        font-family:'silk serif';
+        -webkit-text-stroke: 1px #fff;
+        color: transparent;
+        font-weight: 500;
+        opacity: 1;
+    }
 }
 
 @keyframes anime{
@@ -499,12 +622,24 @@ html,body{
         opacity: 1;
     }
 }
-@keyframes marque {
+@-webkit-keyframes marque {
     from{
-        transform: translateX(0);
+        -webkit-transform: translateX(0);
+                transform: translateX(0);
     }
     to{
-        transform: translateX(-100%);
+        -webkit-transform: translateX(-100%);
+                transform: translateX(-100%);
+    }
+}
+@keyframes marque {
+    from{
+        -webkit-transform: translateX(0);
+                transform: translateX(0);
+    }
+    to{
+        -webkit-transform: translateX(-100%);
+                transform: translateX(-100%);
     }
 }
 /* @keyframes anime2{
@@ -533,11 +668,17 @@ html,body{
     color: transparent;
     text-transform: uppercase;
     display: inline-block;
-    transform: translate(-100%);
-    animation-name: marque;
-    animation-duration: 13s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
+    -webkit-transform: translate(-100%);
+        -ms-transform: translate(-100%);
+            transform: translate(-100%);
+    -webkit-animation-name: marque;
+            animation-name: marque;
+    -webkit-animation-duration: 13s;
+            animation-duration: 13s;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
     animation-direction: reverse;
 
 }
@@ -567,6 +708,8 @@ html,body{
     text-transform: uppercase;
     margin-bottom: 5vw;
     font-weight: 600;
+    -webkit-transition: all ease 1s;
+    -o-transition: all ease 1s;
     transition: all ease 1s;
 } 
 /* #footer h1:hover{
@@ -580,9 +723,15 @@ html,body{
     margin-left: 28vw;
 }
 #footer-div{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-left: 30vw;
     margin-right: 20vw;
     padding: 5.7vw 0;
@@ -624,7 +773,9 @@ html,body{
     position: absolute;
     top: 0;
     left: 0;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     opacity: 0;
 }
 
@@ -688,7 +839,9 @@ html,body{
         position: relative;
         top: 50%;
         left: 50%;
-        transform: translate(-50%,-50%);
+        -webkit-transform: translate(-50%,-50%);
+            -ms-transform: translate(-50%,-50%);
+                transform: translate(-50%,-50%);
     }
     #video-cursor i{
         font-size:3vw;
@@ -718,8 +871,12 @@ html,body{
     #nav{
         position: sticky;
         /* background-color: red; */
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: flex-end;
+        -webkit-box-pack: end;
+            -ms-flex-pack: end;
+                justify-content: flex-end;
         width: 100%;
     }
     #page3{
@@ -735,17 +892,25 @@ html,body{
         /* background-color: red; */
         padding: 1vw;
         position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: flex-end;
-        justify-content: space-between;
-        flex-wrap: wrap;
+        -webkit-box-align: end;
+            -ms-flex-align: end;
+                align-items: flex-end;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
     }
     .img-div{
         height: 100vw;
         width: 85vw;
         position: relative;
         overflow: hidden;
-        flex-shrink: 0;
+        -ms-flex-negative: 0;
+            flex-shrink: 0;
         /* background-color: blue; */
         padding: 3vw;
         margin-top: 2vw;
@@ -758,7 +923,8 @@ html,body{
         width: 85vw;
         position: relative;
         overflow: hidden;
-        flex-shrink: 0;
+        -ms-flex-negative: 0;
+            flex-shrink: 0;
         /* background-color: blue; */
         padding: 3vw;
         margin-top: 17vw;
@@ -769,7 +935,8 @@ html,body{
         width: 85vw;
         position: relative;
         overflow: hidden;
-        flex-shrink: 0;
+        -ms-flex-negative: 0;
+            flex-shrink: 0;
         /* background-color: blue; */
         padding: 3vw;
         margin-top: 7vw;
@@ -780,7 +947,8 @@ html,body{
         width: 85vw;
         position: relative;
         overflow: hidden;
-        flex-shrink: 0;
+        -ms-flex-negative: 0;
+            flex-shrink: 0;
         /* background-color: blue; */
         padding: 3vw;
         margin-top: 30vw;
@@ -790,8 +958,10 @@ html,body{
     .img-div img{
         height: 100%;
         width: 100%;
-        object-fit: cover;
-        object-position: center;
+        -o-object-fit: cover;
+           object-fit: cover;
+        -o-object-position: center;
+           object-position: center;
     
     }
     
@@ -816,12 +986,20 @@ html,body{
         top: 0;
         left: 0;
         background-color: #fff;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
-        justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         border-radius:50%;
         scale: 0;
         overflow: hidden;
+        -webkit-transition: all ease 0.3s;
+        -o-transition: all ease 0.3s;
         transition: all ease 0.3s;
     }
     .circle-in p{
@@ -830,8 +1008,12 @@ html,body{
         font-weight: 500;
         width: 60%;
         scale: 0;
+        -webkit-transition: all ease 0.3s;
+        -o-transition: all ease 0.3s;
         transition: all ease 0.3s;
-        transition-delay: 0.4s
+        -webkit-transition-delay: 0.4s;
+             -o-transition-delay: 0.4s;
+                transition-delay: 0.4s
     }
     .page3-circle1:hover .circle-in{
         scale: 1;
@@ -894,8 +1076,13 @@ html,body{
         
     }
     #page4-flex{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         flex-direction: column-reverse;
         
     }
@@ -917,9 +1104,15 @@ html,body{
         margin-left: 0;
     }
     .blue-div-elem{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
-        justify-content:space-between;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack:justify;
+            -ms-flex-pack:justify;
+                justify-content:space-between;
         /* background-color: red; */
         padding: 5vw 0;
         border-bottom: 2px solid #d0d0d0;
@@ -960,6 +1153,8 @@ html,body{
         text-transform: uppercase;
         margin-bottom: 5vw;
         font-weight: 600;
+        -webkit-transition: all ease 1s;
+        -o-transition: all ease 1s;
         transition: all ease 1s;
     } 
     /* #footer h1:hover{
@@ -973,9 +1168,16 @@ html,body{
         margin-top: 9vw;
     }
     #footer-div{
+        display:-webkit-box;
+        display:-ms-flexbox;
         display:flex;
-        flex-direction: column;
-        justify-content: flex-start;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
         position:relative;
         right: 27vw;
         /* background-color: red; */
@@ -1019,4 +1221,3 @@ html,body{
     
     }
 }
-
